attempting to fix mobile nav spacing

--- a/public/themes/v2/stylesheets/all.css
+++ b/public/themes/v2/stylesheets/all.css
@@ -1403,7 +1403,7 @@
 		#navigation-user-menu {
 			position: absolute;
 			left: -3%;
-			width: 99%;
+			width: 99.3%;
 			padding: 10px 2% 10px 4%;
 			background-color: #000;
 			background-color: rgba( 0,0,0,0.8 );
@@ -1413,17 +1413,17 @@
 		}
 		
 		#navigation-user {
-			top: -10%;
+			top: 0;
 			margin-top: 0;
 		}
 		
 		#navigation-user-menu {
-			top: 64px;
+			top: 76px;
 			margin-top: 0;
 		}
 		
 		#navigation-main {
-			top: 107px;
+			top: 119px;
 		}
 		
 		#navigation-user.menu a,
